[package]
name = "jm-downloader-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1"
serde_json = "1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_okapi = { version = "0.9", features = ["swagger"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.8"
toml = "0.9"
tokio = "1"
rocket_cors = "0.6.0"
schemars = "0.8"
chrono = "0.4"
thiserror = "2"
env_logger = { version = "0.11.8" }
chrono-tz = "0.10.4"
log = "0.4"
log4rs = "1.4.0"
md5 = "0.8"
aes = "0.8"
base64 = "0.22"
image = "0.25"
bytes = "1"
printpdf = { version = "0.7", features = ["embedded_images"] }
